<resources>
    <string name="app_name">SiteZip</string>
    <string name="app_eng_name">SiteZip</string>

    <string name="content_description">ContentDescription</string>

    <string name="site_list">사이트 목록</string>

    <string name="all_tab">전체</string>
    <string name="site">사이트</string>
    <string name="place">장소</string>

    <string name="search_hint">사이트명 또는 링크를 검색하세요</string>

    <string name="place_search_hint">시군구.업체명.상호명을 입력하세요</string>

    <string name="copy_to_link_message">링크를 복사했어요</string>
    <string name="not_found_site_message">사이트 정보가 없어요!</string>
    <string name="not_found_place_message">장소 정보가 없어요!</string>
    <string name="not_found_favorite_site_message">즐겨찾기한 사이트 정보가 없어요</string>
    <string name="site_link_share">사이트 링크 공유하기</string>

    <string name="network_disconnect_message">네트워크 연결이 필요해요!</string>

    <string name="remove_admob">광고제거</string>
    <string name="developer_sponsor">서포트</string>

    <string name="road_address">도로명</string>
    <string name="address">지번</string>
    <string name="phone_number">전화번호</string>
    <string name="opening_hours">영업시간</string>

    <string name="coming_soon_message">준비중입니다.</string>

    <string name="close">닫기</string>
    <string name="setting">설정</string>
    <string name="cancel">취소</string>

    <string name="view_details">상세 보기</string>

    <string name="permission_denied_message">[설정] > [권한]에서 권한을 허용해 주세요.</string>

    <string name="location_service_activation_title">위치 서비스 비활성화</string>
    <string name="location_service_activation_message">앱을 사용하기 위해서는 위치 서비스가 필요해요.\n[설정] 버튼을 클릭하여 위치 설정을 수정해주세요.</string>

    <!-- 구글 애드몹 -->
    <string name="google_admob_app_id">ca-app-pub-7819212431082590~3976385446</string>
    <string name="google_admob_banner_id">ca-app-pub-7819212431082590/9915764372</string>
    <string name="google_admob_interstitial_id">ca-app-pub-7819212431082590/8783781575</string>

    <string name="google_admob_app_id_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="google_admob_banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="google_admob_interstitial_id_test">ca-app-pub-3940256099942544/1033173712</string>

    <string name="setting_appirater_rate_popup">앱 리뷰 요청 알림</string>
    <string name="appirater_rate_message">잠시 시간을 내어 스토어 평가를 해주실 수 있나요?\n작성하신 의견을 적극적으로 반영할게요!</string>
    <string name="appirater_rate">네, 이 앱을 평가할게요</string>
    <string name="appirater_rate_later">아니요. 다음에 평가할게요</string>
    <string name="do_not_show_this_window">이 창을 다시 표시 안 함</string>
    <string name="appirater_title">%s 리뷰 및 평가</string>
    <string name="setting_app_version">앱 버전</string>


</resources>