<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/v_top"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="테스트입니다."
                android:textColor="@color/color_ffc107"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/v_top"
                app:layout_constraintEnd_toEndOf="@+id/v_top"
                app:layout_constraintStart_toStartOf="@+id/v_top"
                app:layout_constraintTop_toTopOf="@+id/v_top" />

            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:lineSpacingExtra="10dp"
                android:text="@string/appirater_rate_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_top" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/appirater_rate"
                app:layout_constraintTop_toBottomOf="@id/message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/rate_later"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/appirater_rate_later"
                app:layout_constraintTop_toBottomOf="@id/rate" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/do_not_show_this_window"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rate_later" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>