<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kr.co.hongstudio.sitezip.ui.screen.place.PlaceZipViewModel" />

        <variable
            name="mainViewModel"
            type="kr.co.hongstudio.sitezip.ui.screen.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants">

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_search"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:focusableInTouchMode="false"
            android:visibility="@{viewModel.isComingSoon() == true ? View.GONE : View.VISIBLE}"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/ic_baseline_search_24"
                    android:contentDescription="@string/content_description"
                    android:onClick="@{() -> viewModel.getPlaces(viewModel.searchText)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_search_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="50dp"
                    android:autofillHints="@string/place_search_hint"
                    android:background="@null"
                    android:hint="@string/place_search_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp"
                    android:text="@={viewModel.searchText}"
                    android:textColor="@color/color_ffffff"
                    android:textColorHint="@color/color_eeeeee"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_close"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/iv_play_voice_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_baseline_mic_24"
                    android:contentDescription="@string/content_description"
                    android:onClick="@{() -> viewModel.playVoiceSearch()}"
                    android:visibility="@{viewModel.isSearchTextChanged() == true ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/ic_baseline_clear_24"
                    android:contentDescription="@string/content_description"
                    android:onClick="@{() -> viewModel.setSearchText(``)}"
                    android:visibility="@{viewModel.isSearchTextChanged() == true ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_places"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:clipToPadding="false"
            android:descendantFocusability="blocksDescendants"
            android:paddingBottom="5dp"
            android:scrollbars="vertical"
            android:visibility="@{viewModel.isComingSoon() == true ? View.GONE : View.VISIBLE}"
            app:items="@{viewModel.placeZip.places}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_search"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_not_found_place"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/not_found_place_message"
            android:visibility="@{viewModel.placeZip.places.size() == 0 &amp;&amp; viewModel.isComingSoon() == false ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_search"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/tv_state_ready"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/coming_soon_message"
            android:visibility="@{viewModel.isComingSoon() == true ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>